EEC_InitBackup/src/objects/AWSKey__c.object
<CustomObject>
    <description>Store keys used to communicate with Amazon Web Services</description>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Encrypted__c</fullName>
        <label>Secret</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>AWS Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>